Mon Feb 14 23:10:21 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* libxslt/namespaces.c: fixed a problem with
	  exclude-result-prefixes (bug 165560)

Mon Feb 14 12:51:07 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: added a cretion of ctxt->globalVars in
	  xsltProcessUserParamInternal if missing.

Wed Feb  9 21:58:56 CET 2005 Daniel Veillard <daniel@veillard.com>

	* doc/Makefile.am doc/libxslt-api.xml doc/libxslt-refs.xml 
	  doc/EXSLT/libexslt-api.xml: applied patch for make wiki from
	  Joel Reed and rebuild
	* tests/plugins/Makefile.am: fix from Joel Reed for make dist

Sun Jan 30 20:01:21 CET 2005 Daniel Veillard <daniel@veillard.com>

	* tests/plugins/testplugin.c win32/Makefile.msvc win32/configure.js:
	  applied plugin patch for Windows by Joel Reed

Fri Jan 28 01:00:56 CET 2005 Daniel Veillard <daniel@veillard.com>

	* win32/configure.js: Makefile fixes for Widows from Joel Reed

Sat Jan 22 22:14:26 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c libxslt/preproc.c libxslt/templates.c
	  libxslt/xslt.c libxslt/xsltInternals.h: chasing xmlStrEqual
	  calls and removed them when comparing mode and modeURI for
	  templates by interning those strings when compiling the
	  stylesheets.

Sat Jan 22 19:17:13 CET 2005 Daniel Veillard <daniel@veillard.com>

	* configure.in: small fix for local setup
	* libxslt/transform.c libxslt/variables.c : speeding up some
	  variable lookup. In the process dug out something nasty about
	  ctxt->dict creation and key initialization order.

Sat Jan 22 16:28:27 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/templates.c libxslt/transform.c libxslt/xslt.c
	  libxslt/xsltInternals.h: when copying text nodes in elements
	  or attributes to the output, if interning, then reuse the strings
	  directly without copying them in the output tree if dicts are
	  shared between the context and the output docs. Less allocations